--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="4000" data-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/1.jpg" class="img-fluid" alt="bus1">
+                    <img src="img/flota.JPG" class="img-fluid" alt="bus1">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/2.jpg" class="img-fluid" alt="bus2">
+                    <img src="img/flota2.jpg" class="img-fluid" alt="bus2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/3.jpg" class="img-fluid" alt="bus3">
+                    <img src="img/flota3.jpg" class="img-fluid" alt="bus3">
                 </div>
             </div>
         </div>
