--- a/index.html
+++ b/index.html
@@ -6,14 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MK-2</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#front-page">MK2</a>
+        <a class="navbar-brand" href="#front-page"><svg
+            xmlns:dc="http://purl.org/dc/elements/1.1/"
+            xmlns:cc="http://creativecommons.org/ns#"
+            xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+            xmlns:svg="http://www.w3.org/2000/svg"
+            xmlns="http://www.w3.org/2000/svg"
+            id="svg18"
+            version="1.1"
+            fill-rule="evenodd"
+            viewBox="0 0 841.89 595.276"
+            height="200px"
+            width="200px">
+           <metadata
+              id="metadata24">
+             <rdf:RDF>
+               <cc:Work
+                  rdf:about="">
+                 <dc:format>image/svg+xml</dc:format>
+                 <dc:type
+                    rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+               </cc:Work>
+             </rdf:RDF>
+           </metadata>
+           <defs
+              id="defs22" />
+           <g
+              id="g16">
+             <path
+                id="path2"
+                d="M 461.5 293.526C 469.004 287.009 474.918 281.469 479.242 276.915C 483.567 272.36 485.734 269.428 485.734 268.11C 485.734 267.746 485.648 267.374 485.488 266.996C 485.318 266.618 485.062 266.234 484.712 265.843C 487.608 266.482 489.822 267.447 491.345 268.756C 492.869 270.059 493.635 271.63 493.635 273.461C 493.635 275.293 492.68 277.403 490.768 279.789C 488.856 282.174 484.466 286.312 477.605 292.19L 481.769 292.19C 484.967 292.19 488.166 292.061 491.364 291.806C 492.008 291.759 492.405 291.734 492.557 291.734C 492.888 291.734 493.162 291.779 493.37 291.865C 493.588 291.956 493.692 292.073 493.692 292.229C 493.692 292.751 493.474 293.129 493.048 293.363C 492.632 293.598 491.922 293.715 490.948 293.715C 490.191 293.715 488.601 293.683 486.179 293.624C 483.756 293.559 481.712 293.526 480.047 293.526L 461.5 293.526zM 456.313 293.526C 463.97 286.904 469.979 281.339 474.351 276.817C 478.724 272.301 480.908 269.44 480.908 268.228C 480.908 267.59 480.483 267.121 479.621 266.815C 478.759 266.509 477.426 266.358 475.608 266.358C 471.341 266.358 467.736 267.094 464.783 268.56C 461.841 270.034 460.364 271.799 460.364 273.859C 460.364 275.117 460.96 276.348 462.162 277.54C 462.465 277.846 462.607 278.042 462.607 278.114C 462.607 278.296 462.523 278.446 462.351 278.564C 462.171 278.688 461.945 278.745 461.669 278.745C 460.934 278.745 460.223 278.264 459.551 277.293C 458.879 276.329 458.539 275.234 458.539 274.016C 458.539 271.428 460.185 269.324 463.488 267.693C 466.79 266.064 471.113 265.25 476.47 265.25C 478.675 265.25 480.359 265.459 481.532 265.883C 482.705 266.3 483.293 266.899 483.293 267.674C 483.293 269.18 481.183 272.125 476.971 276.524C 472.761 280.922 466.589 286.592 458.482 293.526L 456.313 293.526z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path4"
+                d="M 417.551 302.657L 417.551 265.913L 431.244 265.913C 431.225 267.179 431.196 268.472 431.149 269.773C 431.102 271.083 431.074 271.776 431.074 271.855L 431.074 275.09C 434.991 273.208 438.965 271.161 442.987 268.94C 447 266.72 449.157 265.609 449.46 265.609C 450.255 265.609 450.822 265.67 451.163 265.783C 451.504 265.904 451.674 266.112 451.674 266.399C 451.674 266.824 450.094 267.726 446.933 269.114C 443.773 270.501 440.905 271.915 438.341 273.355C 441.776 279.896 445.325 286.28 448.987 292.508C 452.649 298.727 454.475 301.92 454.475 302.067C 454.475 302.31 454.305 302.518 453.973 302.691C 453.642 302.874 453.235 302.961 452.753 302.961C 452.109 302.961 451.135 301.633 449.848 298.97C 449.195 297.635 448.655 296.559 448.21 295.743C 445.845 291.224 443.735 287.243 441.871 283.799C 440.016 280.364 438.256 277.163 436.59 274.197C 435.796 274.587 434.953 275.038 434.054 275.541C 433.165 276.053 432.171 276.643 431.074 277.319L 431.074 296.732C 431.074 296.802 431.102 297.487 431.149 298.797C 431.196 300.098 431.225 301.391 431.244 302.657L 417.551 302.657z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path6"
+                d="M 413.255 302.657C 413.274 301.503 413.293 300.271 413.322 298.944C 413.35 297.626 413.369 296.889 413.369 296.732L 413.369 271.855C 413.369 271.69 413.35 270.944 413.322 269.625C 413.293 268.298 413.274 267.066 413.255 265.913L 415.223 265.913L 415.223 302.657L 413.255 302.657z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path8"
+                d="M 373.663 299.838L 360.974 284.033C 359.1 289.923 357.529 295.518 356.261 300.801C 356.129 301.277 356.044 301.59 356.006 301.746C 355.883 302.215 355.722 302.544 355.533 302.735C 355.353 302.917 355.097 303.013 354.756 303.013C 354.057 303.013 353.583 302.952 353.337 302.822C 353.082 302.691 352.959 302.475 352.959 302.145C 352.959 302.067 352.987 301.92 353.044 301.703C 353.101 301.495 353.176 301.234 353.29 300.931L 360.274 280.069L 374.799 298.233L 373.663 299.838z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path10"
+                d="M 391.803 302.657C 390.876 299.369 389.438 294.408 387.469 287.763L 386.116 283.088C 383.769 286.124 381.782 288.726 380.155 290.895C 378.527 293.063 377.193 294.867 376.161 296.307L 361.191 277.528L 365.629 264.36C 368.563 268.359 371.383 272.098 374.08 275.567C 376.776 279.037 379.388 282.29 381.905 285.326L 386.92 278.82L 393.819 302.657L 391.803 302.657z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path12"
+                d="M 396.317 302.657L 388.718 276.478C 389.646 275.229 390.696 273.789 391.879 272.176C 393.062 270.554 394.973 267.951 397.594 264.36C 399.743 270.883 401.834 277.337 403.878 283.713C 405.912 290.088 407.909 296.403 409.849 302.657L 396.317 302.657z"
+                style="stroke:none; fill:#e21c2a" />
+             <path
+                id="path14"
+                d="M 456.479 303.068L 493.834 303.068L 493.834 295.84L 456.479 295.84L 456.479 303.068z"
+                style="stroke:none; fill:#e21c2a" />
+           </g>
+         </svg></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
             aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,7 +109,7 @@
     <div class="container-fluid" id="about-page">
         <div class="row">
             <div class="col">
-                <h1>O nas</h1>
+                <h1 class="font-weight-bold">O nas</h1>
                 <p>Oferujemy wynajem turystycznych busów i autokarów w przewozach krajowych i zagranicznych oraz
                     podmiejskich autobusów na krótkich trasach po Warszawie. Posiadamy rozbudowaną flotę transportową,
                     dzięki czemu możemy dopasować odpowiedni środek transportu dla każdej grupy pasażerów. Zatrudniamy
@@ -66,22 +124,22 @@
         </div>
     </div>
     <div class="container-fluid" id="fleet-page">
-        <h1>Flota</h1>
+        <h1 class="font-weight-bold">Flota</h1>
         <div class="row">
 
-            <div class="col-3">
+            <div class="col-lg-4 col-xl-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/4.jpg" class="card-img-top" alt="...">
+                    <img src="img/man.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">MAN 768x</h5>
+                        <p class="card-text">Ilość miejsc: 50</p>
+                        <p class="card-text">Klimatyzacja</p>
+                        <p class="card-text">WC</p>
+                        <p class="card-text">DVD</p>
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-4 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="img/5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -93,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-4 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="img/6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -105,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-4 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="img/7.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -113,32 +171,110 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the
                             bulk of the
                             card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid" id="contact-page">
-        <h1>Kontakt</h1>
-        <p>email: text@example.com</p>
-        <p>Telefon: 691-487-883</p>
-    </div>
+    <!--Section: Contact v.2-->
+    <section class="mb-4" id="contact-page">
+
+        <!--Section heading-->
+        <h1 class="h1-responsive font-weight-bold text-center my-4">Kontakt</h1>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">Aby wysłać wiadomość korzystając z poniższego formularza,
+            należy wypełnić wszystkie pola.</p>
+
+        <div class="row">
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5">
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                    <!--Grid row-->
+                    <div class="row">
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="name" name="name" class="form-control">
+                                <label for="name" class="">Imię i nazwisko</label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="email" name="email" class="form-control">
+                                <label for="email" class="">Email</label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="md-form mb-0">
+                                <input type="text" id="subject" name="subject" class="form-control">
+                                <label for="subject" class="">Temat</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-12">
+                            <div class="md-form">
+                                <textarea type="text" id="message" name="message" rows="2"
+                                    class="form-control md-textarea"></textarea>
+                                <label for="message">Treść</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Grid row-->
+                </form>
+                <div class="text-center text-md-left">
+                    <a class="btn btn-send" onclick="document.getElementById('contact-form').submit();">Wyślij</a>
+                </div>
+                <div class="status"></div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                        <p>Domaniewek 2/2, 05-840 Brwinów</p>
+                    </li>
+                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>22 215 41 83</p>
+                        <p>691 487 883</p>
+                    </li>
+                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>biuro@mk2.com.pl</p>
+                    </li>
+                </ul>
+            </div>
+            <!--Grid column-->
+        </div>
+    </section>
+    <!--Section: Contact v.2-->
     <footer>
-            <p>&copy; 2019 Jan Ponichter</p>       
+        <p>&copy; 2019 Jan Ponichter</p>
     </footer>
-
-
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+<!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
 <script src="app.js"></script>
 
 </html>
