Fleet and contact page rebuilded.

--- a/index.html
+++ b/index.html
@@ -15,63 +15,43 @@
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#front-page"><svg
-            xmlns:dc="http://purl.org/dc/elements/1.1/"
-            xmlns:cc="http://creativecommons.org/ns#"
-            xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-            xmlns:svg="http://www.w3.org/2000/svg"
-            xmlns="http://www.w3.org/2000/svg"
-            id="svg18"
-            version="1.1"
-            fill-rule="evenodd"
-            viewBox="0 0 841.89 595.276"
-            height="200px"
-            width="200px">
-           <metadata
-              id="metadata24">
-             <rdf:RDF>
-               <cc:Work
-                  rdf:about="">
-                 <dc:format>image/svg+xml</dc:format>
-                 <dc:type
-                    rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-               </cc:Work>
-             </rdf:RDF>
-           </metadata>
-           <defs
-              id="defs22" />
-           <g
-              id="g16">
-             <path
-                id="path2"
-                d="M 461.5 293.526C 469.004 287.009 474.918 281.469 479.242 276.915C 483.567 272.36 485.734 269.428 485.734 268.11C 485.734 267.746 485.648 267.374 485.488 266.996C 485.318 266.618 485.062 266.234 484.712 265.843C 487.608 266.482 489.822 267.447 491.345 268.756C 492.869 270.059 493.635 271.63 493.635 273.461C 493.635 275.293 492.68 277.403 490.768 279.789C 488.856 282.174 484.466 286.312 477.605 292.19L 481.769 292.19C 484.967 292.19 488.166 292.061 491.364 291.806C 492.008 291.759 492.405 291.734 492.557 291.734C 492.888 291.734 493.162 291.779 493.37 291.865C 493.588 291.956 493.692 292.073 493.692 292.229C 493.692 292.751 493.474 293.129 493.048 293.363C 492.632 293.598 491.922 293.715 490.948 293.715C 490.191 293.715 488.601 293.683 486.179 293.624C 483.756 293.559 481.712 293.526 480.047 293.526L 461.5 293.526zM 456.313 293.526C 463.97 286.904 469.979 281.339 474.351 276.817C 478.724 272.301 480.908 269.44 480.908 268.228C 480.908 267.59 480.483 267.121 479.621 266.815C 478.759 266.509 477.426 266.358 475.608 266.358C 471.341 266.358 467.736 267.094 464.783 268.56C 461.841 270.034 460.364 271.799 460.364 273.859C 460.364 275.117 460.96 276.348 462.162 277.54C 462.465 277.846 462.607 278.042 462.607 278.114C 462.607 278.296 462.523 278.446 462.351 278.564C 462.171 278.688 461.945 278.745 461.669 278.745C 460.934 278.745 460.223 278.264 459.551 277.293C 458.879 276.329 458.539 275.234 458.539 274.016C 458.539 271.428 460.185 269.324 463.488 267.693C 466.79 266.064 471.113 265.25 476.47 265.25C 478.675 265.25 480.359 265.459 481.532 265.883C 482.705 266.3 483.293 266.899 483.293 267.674C 483.293 269.18 481.183 272.125 476.971 276.524C 472.761 280.922 466.589 286.592 458.482 293.526L 456.313 293.526z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path4"
-                d="M 417.551 302.657L 417.551 265.913L 431.244 265.913C 431.225 267.179 431.196 268.472 431.149 269.773C 431.102 271.083 431.074 271.776 431.074 271.855L 431.074 275.09C 434.991 273.208 438.965 271.161 442.987 268.94C 447 266.72 449.157 265.609 449.46 265.609C 450.255 265.609 450.822 265.67 451.163 265.783C 451.504 265.904 451.674 266.112 451.674 266.399C 451.674 266.824 450.094 267.726 446.933 269.114C 443.773 270.501 440.905 271.915 438.341 273.355C 441.776 279.896 445.325 286.28 448.987 292.508C 452.649 298.727 454.475 301.92 454.475 302.067C 454.475 302.31 454.305 302.518 453.973 302.691C 453.642 302.874 453.235 302.961 452.753 302.961C 452.109 302.961 451.135 301.633 449.848 298.97C 449.195 297.635 448.655 296.559 448.21 295.743C 445.845 291.224 443.735 287.243 441.871 283.799C 440.016 280.364 438.256 277.163 436.59 274.197C 435.796 274.587 434.953 275.038 434.054 275.541C 433.165 276.053 432.171 276.643 431.074 277.319L 431.074 296.732C 431.074 296.802 431.102 297.487 431.149 298.797C 431.196 300.098 431.225 301.391 431.244 302.657L 417.551 302.657z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path6"
-                d="M 413.255 302.657C 413.274 301.503 413.293 300.271 413.322 298.944C 413.35 297.626 413.369 296.889 413.369 296.732L 413.369 271.855C 413.369 271.69 413.35 270.944 413.322 269.625C 413.293 268.298 413.274 267.066 413.255 265.913L 415.223 265.913L 415.223 302.657L 413.255 302.657z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path8"
-                d="M 373.663 299.838L 360.974 284.033C 359.1 289.923 357.529 295.518 356.261 300.801C 356.129 301.277 356.044 301.59 356.006 301.746C 355.883 302.215 355.722 302.544 355.533 302.735C 355.353 302.917 355.097 303.013 354.756 303.013C 354.057 303.013 353.583 302.952 353.337 302.822C 353.082 302.691 352.959 302.475 352.959 302.145C 352.959 302.067 352.987 301.92 353.044 301.703C 353.101 301.495 353.176 301.234 353.29 300.931L 360.274 280.069L 374.799 298.233L 373.663 299.838z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path10"
-                d="M 391.803 302.657C 390.876 299.369 389.438 294.408 387.469 287.763L 386.116 283.088C 383.769 286.124 381.782 288.726 380.155 290.895C 378.527 293.063 377.193 294.867 376.161 296.307L 361.191 277.528L 365.629 264.36C 368.563 268.359 371.383 272.098 374.08 275.567C 376.776 279.037 379.388 282.29 381.905 285.326L 386.92 278.82L 393.819 302.657L 391.803 302.657z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path12"
-                d="M 396.317 302.657L 388.718 276.478C 389.646 275.229 390.696 273.789 391.879 272.176C 393.062 270.554 394.973 267.951 397.594 264.36C 399.743 270.883 401.834 277.337 403.878 283.713C 405.912 290.088 407.909 296.403 409.849 302.657L 396.317 302.657z"
-                style="stroke:none; fill:#e21c2a" />
-             <path
-                id="path14"
-                d="M 456.479 303.068L 493.834 303.068L 493.834 295.84L 456.479 295.84L 456.479 303.068z"
-                style="stroke:none; fill:#e21c2a" />
-           </g>
-         </svg></a>
+        <a class="navbar-brand" href="#front-page"><svg xmlns:dc="http://purl.org/dc/elements/1.1/"
+                xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg18" version="1.1"
+                fill-rule="evenodd" viewBox="0 0 1055.91 299.055" height="40px" width="150px">
+                <metadata id="metadata24">
+                    <rdf:RDF>
+                        <cc:Work rdf:about="">
+                            <dc:format>image/svg+xml</dc:format>
+                            <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                        </cc:Work>
+                    </rdf:RDF>
+                </metadata>
+                <defs id="defs22" />
+                <g id="g16">
+                    <path id="path2"
+                        d="M 810.289 222.853C 865.848 174.599 909.633 133.588 941.65 99.87C 973.668 66.1415 989.71 44.4352 989.71 34.6819C 989.71 31.9841 989.078 29.2328 987.888 26.431C 986.629 23.634 984.736 20.7865 982.144 17.8948C 1003.58 22.6233 1019.98 29.7673 1031.26 39.4639C 1042.53 49.1117 1048.21 60.7398 1048.21 74.293C 1048.21 87.8557 1041.13 103.484 1026.98 121.144C 1012.83 138.803 980.323 169.441 929.528 212.956L 960.356 212.956C 984.035 212.956 1007.71 212.001 1031.4 210.114C 1036.16 209.772 1039.1 209.584 1040.22 209.584C 1042.67 209.584 1044.71 209.918 1046.25 210.55C 1047.86 211.224 1048.63 212.096 1048.63 213.248C 1048.63 217.111 1047.02 219.908 1043.86 221.647C 1040.78 223.385 1035.53 224.252 1028.31 224.252C 1022.71 224.252 1010.94 224.011 993.003 223.575C 975.07 223.096 959.936 222.853 947.604 222.853L 810.289 222.853zM 771.889 222.852C 828.579 173.826 873.063 132.619 905.435 99.1448C 937.814 65.7063 953.984 44.5235 953.984 35.5506C 953.984 30.8284 950.836 27.3534 944.454 25.0877C 938.074 22.822 928.204 21.7073 914.745 21.7073C 883.151 21.7073 856.456 27.1563 834.598 38.0118C 812.814 48.9241 801.882 61.9932 801.882 77.2398C 801.882 86.5533 806.295 95.6697 815.194 104.499C 817.437 106.763 818.482 108.212 818.482 108.747C 818.482 110.09 817.861 111.203 816.594 112.077C 815.261 112.994 813.586 113.42 811.542 113.42C 806.1 113.42 800.837 109.852 795.859 102.669C 790.883 95.5263 788.366 87.4221 788.366 78.405C 788.366 59.2419 800.557 43.6658 825.005 31.5931C 849.457 19.5315 881.462 13.5038 921.127 13.5038C 937.449 13.5038 949.915 15.0489 958.599 18.1897C 967.288 21.2752 971.636 25.7121 971.636 31.4543C 971.636 42.6 956.02 64.4024 924.831 96.9768C 893.662 129.535 847.969 171.512 787.944 222.852L 771.889 222.852z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path4"
+                        d="M 484.907 290.453L 484.907 18.4126L 586.282 18.4126C 586.143 27.7874 585.931 37.3575 585.581 46.9904C 585.232 56.6864 585.022 61.8239 585.022 62.4032L 585.022 86.3576C 614.026 72.4223 643.45 57.2656 673.226 40.8245C 702.933 24.3855 718.904 16.1628 721.147 16.1628C 727.032 16.1628 731.236 16.6119 733.756 17.4472C 736.279 18.3475 737.54 19.888 737.54 22.0076C 737.54 25.1557 725.842 31.8337 702.442 42.1089C 679.041 52.384 657.813 62.8523 638.828 73.5136C 664.258 121.937 690.532 169.203 717.645 215.314C 744.758 261.361 758.279 284.994 758.279 286.085C 758.279 287.884 757.018 289.427 754.565 290.709C 752.113 292.058 749.1 292.703 745.528 292.703C 740.764 292.703 733.549 282.874 724.018 263.157C 719.185 253.27 715.191 245.306 711.898 239.268C 694.385 205.809 678.762 176.33 664.959 150.836C 651.228 125.404 638.197 101.705 625.865 79.7425C 619.982 82.6324 613.745 85.9714 607.09 89.6966C 600.504 93.4868 593.148 97.8521 585.022 102.862L 585.022 246.59C 585.022 247.104 585.232 252.177 585.581 261.875C 585.931 271.508 586.143 281.078 586.282 290.453L 484.907 290.453z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path6"
+                        d="M 453.101 290.453C 453.242 281.913 453.38 272.792 453.592 262.966C 453.802 253.205 453.943 247.747 453.943 246.59L 453.943 62.4032C 453.943 61.1817 453.802 55.6601 453.592 45.897C 453.38 36.073 453.242 26.9521 453.101 18.4126L 467.672 18.4126L 467.672 290.453L 453.101 290.453z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path8"
+                        d="M 159.973 269.581L 66.0232 152.569C 52.1509 196.178 40.5221 237.6 31.1325 276.711C 30.1525 280.241 29.5229 282.553 29.2416 283.71C 28.3329 287.179 27.1408 289.618 25.7389 291.03C 24.4083 292.379 22.5174 293.087 19.9927 293.087C 14.8111 293.087 11.3062 292.638 9.48458 291.672C 7.59367 290.709 6.68284 289.105 6.68284 286.665C 6.68284 286.085 6.8927 284.994 7.31454 283.389C 7.73428 281.848 8.29463 279.92 9.1362 277.674L 60.8395 123.221L 168.38 257.701L 159.973 269.581z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path10"
+                        d="M 294.276 290.453C 287.412 266.114 276.761 229.379 262.188 180.186L 252.171 145.57C 234.795 168.047 220.084 187.313 208.033 203.37C 195.982 219.425 186.104 232.783 178.469 243.442L 67.635 104.404L 100.492 6.91599C 122.211 36.5222 143.089 64.2018 163.056 89.8897C 183.021 115.58 202.358 139.662 220.995 162.139L 258.124 113.972L 309.198 290.453L 294.276 290.453z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path12"
+                        d="M 327.696 290.453L 271.436 96.6328C 278.303 87.386 286.079 76.7246 294.837 64.7789C 303.595 52.7702 317.746 33.5022 337.153 6.91599C 353.056 55.211 368.539 102.99 383.672 150.195C 398.734 197.397 413.518 244.15 427.881 290.453L 327.696 290.453z"
+                        style="stroke:none; fill:#e21c2a" />
+                    <path id="path14"
+                        d="M 773.115 293.496L 1049.68 293.496L 1049.68 239.982L 773.115 239.982L 773.115 293.496z"
+                        style="stroke:none; fill:#e21c2a" />
+                </g>
+            </svg></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
             aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -101,7 +81,7 @@
                     <img src="img/flota2.jpg" class="img-fluid" alt="bus2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/flota3.jpg" class="img-fluid" alt="bus3">
+                    <img src="img/flota3.JPG" class="img-fluid" alt="bus3">
                 </div>
             </div>
         </div>
@@ -126,53 +106,23 @@
     <div class="container-fluid" id="fleet-page">
         <h1 class="font-weight-bold">Flota</h1>
         <div class="row">
+            <div class="col-sm-6 fleet-left">
+                <div class="view overlay zoom">
+                    <img src="img/flota2.JPG" class="img-fluid" alt="zoom">
+                    <div class="mask flex-center waves-effect waves-light">
+                        <p class="white-text">Zoom effect sadadsdasdad</p>
+                    </div>
+                </div>
 
-            <div class="col-lg-4 col-xl-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/man.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">MAN 768x</h5>
-                        <p class="card-text">Ilość miejsc: 50</p>
-                        <p class="card-text">Klimatyzacja</p>
-                        <p class="card-text">WC</p>
-                        <p class="card-text">DVD</p>
-                    </div>
-                </div>
             </div>
-            <div class="col-lg-4 col-xl-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/5.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="col-sm-6 fleet-right">
+                <div class="view overlay zoom">
+                    <img src="img/flota.JPG" class="img-fluid" alt="zoom">
+                    <div class="mask flex-center waves-effect waves-light">
+                        <p class="white-text">Zoom effect</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-xl-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/6.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-xl-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/7.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the
-                            card's content.</p>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
@@ -181,13 +131,44 @@
 
         <!--Section heading-->
         <h1 class="h1-responsive font-weight-bold text-center my-4">Kontakt</h1>
-        <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5">Aby wysłać wiadomość korzystając z poniższego formularza,
-            należy wypełnić wszystkie pola.</p>
 
         <div class="row">
             <!--Grid column-->
-            <div class="col-md-9 mb-md-0 mb-5">
+            <div class="col-md-12 text-center">
+                <div class="row">
+                    <div class="col-md-4">
+                        <i class="fas fa-map-marker-alt mt-4 fa-2x"></i>
+                        <p>Domaniewek 2/2, 05-840 Brwinów</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>22 215 41 83, 691 487 883</p>
+                        <p>691 487 883</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>biuro@mk2.com.pl</p>
+                    </div>
+                </div>
+
+                <!-- <ul class="list-unstyled mb-0">
+                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                        <p>Domaniewek 2/2, 05-840 Brwinów</p>
+                    </li>
+                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>22 215 41 83</p>
+                        <p>691 487 883</p>
+                    </li>
+                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>biuro@mk2.com.pl</p>
+                    </li>
+                </ul> -->
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <p class="text-center w-responsive mx-auto mb-5">Aby wysłać wiadomość korzystając z poniższego formularza,
+                    należy wypełnić wszystkie pola.</p>
+            <div class="col-md-12 mb-md-0 mb-5">
                 <form id="contact-form" name="contact-form" action="mail.php" method="POST">
                     <!--Grid row-->
                     <div class="row">
@@ -241,24 +222,6 @@
                 </div>
                 <div class="status"></div>
             </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Domaniewek 2/2, 05-840 Brwinów</p>
-                    </li>
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>22 215 41 83</p>
-                        <p>691 487 883</p>
-                    </li>
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>biuro@mk2.com.pl</p>
-                    </li>
-                </ul>
-            </div>
-            <!--Grid column-->
         </div>
     </section>
     <!--Section: Contact v.2-->
