--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
         <a class="navbar-brand" href="#front-page"><svg xmlns:dc="http://purl.org/dc/elements/1.1/"
                 xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
                 xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg18" version="1.1"
-                fill-rule="evenodd" viewBox="0 0 1055.91 299.055" height="40px" width="150px">
-                <metadata id="metadata24">
-                    <rdf:RDF>
-                        <cc:Work rdf:about="">
-                            <dc:format>image/svg+xml</dc:format>
-                            <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                        </cc:Work>
-                    </rdf:RDF>
-                </metadata>
+                fill-rule="evenodd" viewBox="0 0 1055.91 299.055" height="60px" width="200px">
                 <defs id="defs22" />
                 <g id="g16">
                     <path id="path2"
@@ -89,7 +81,7 @@
     <div class="container-fluid" id="about-page">
         <div class="row">
             <div class="col">
-                <h1 class="font-weight-bold">O nas</h1>
+                <h1 class="h1-responsive font-weight-bold text-center">O nas</h1>
                 <p>Oferujemy wynajem turystycznych busów i autokarów w przewozach krajowych i zagranicznych oraz
                     podmiejskich autobusów na krótkich trasach po Warszawie. Posiadamy rozbudowaną flotę transportową,
                     dzięki czemu możemy dopasować odpowiedni środek transportu dla każdej grupy pasażerów. Zatrudniamy
@@ -104,9 +96,9 @@
         </div>
     </div>
     <div class="container-fluid" id="fleet-page">
-        <h1 class="font-weight-bold">Flota</h1>
         <div class="row">
             <div class="col-sm-6 fleet-left">
+                <h2>Busy</h2>
                 <div class="view overlay zoom">
                     <img src="img/flota2.JPG" class="img-fluid" alt="zoom">
                     <div class="mask flex-center waves-effect waves-light">
@@ -116,6 +108,7 @@
 
             </div>
             <div class="col-sm-6 fleet-right">
+                <h2>Autokary</h2>
                 <div class="view overlay zoom">
                     <img src="img/flota.JPG" class="img-fluid" alt="zoom">
                     <div class="mask flex-center waves-effect waves-light">
@@ -134,7 +127,7 @@
 
         <div class="row">
             <!--Grid column-->
-            <div class="col-md-12 text-center">
+            <div class="col-md-12 text-center pb-4">
                 <div class="row">
                     <div class="col-md-4">
                         <i class="fas fa-map-marker-alt mt-4 fa-2x"></i>
@@ -143,7 +136,6 @@
                     <div class="col-md-4">
                         <i class="fas fa-phone mt-4 fa-2x"></i>
                         <p>22 215 41 83, 691 487 883</p>
-                        <p>691 487 883</p>
                     </div>
                     <div class="col-md-4">
                         <i class="fas fa-envelope mt-4 fa-2x"></i>
@@ -167,10 +159,17 @@
             <!--Grid column-->
             <!--Grid column-->
             <p class="text-center w-responsive mx-auto mb-5">Aby wysłać wiadomość korzystając z poniższego formularza,
-                    należy wypełnić wszystkie pola.</p>
+                należy wypełnić wszystkie pola.</p>
             <div class="col-md-12 mb-md-0 mb-5">
+                <!-- Default unchecked -->
+
                 <form id="contact-form" name="contact-form" action="mail.php" method="POST">
                     <!--Grid row-->
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                        <label class="custom-control-label  underline" for="defaultUnchecked">Wyrażam zgodę na przetwarzanie moich
+                            danych osobowych zawartych w poniższym formularzu.</label>
+                    </div>
                     <div class="row">
                         <!--Grid column-->
                         <div class="col-md-6">
