--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img src="img/flota2.jpg" class="img-fluid" alt="bus2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/flota3.JPG" class="img-fluid" alt="bus3">
+                    <img src="img/man.jpg" class="img-fluid" alt="bus3">
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
 
         <div class="row">
             <!--Grid column-->
-            <div class="col-md-12 text-center pb-4">
+            <div class="col-md-12 text-center pb-5">
                 <div class="row">
                     <div class="col-md-4">
                         <i class="fas fa-map-marker-alt mt-4 fa-2x"></i>
@@ -158,7 +158,7 @@
             </div>
             <!--Grid column-->
             <!--Grid column-->
-            <p class="text-center w-responsive mx-auto mb-5">Aby wysłać wiadomość korzystając z poniższego formularza,
+            <p class="text-center w-responsive mx-auto">Aby wysłać wiadomość korzystając z poniższego formularza,
                 należy wypełnić wszystkie pola.</p>
             <div class="col-md-12 mb-md-0 mb-5">
                 <!-- Default unchecked -->
@@ -216,7 +216,7 @@
                     </div>
                     <!--Grid row-->
                 </form>
-                <div class="text-center text-md-left">
+                <div class="text-center text-md-left pl-4">
                     <a class="btn btn-send" onclick="document.getElementById('contact-form').submit();">Wyślij</a>
                 </div>
                 <div class="status"></div>
