Smooth scroll added

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="card">
                             <!-- Card image -->
                             <div class="view overlay">
-                                <img class="card-img-top" src="img/volvo.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/volvo-side.jpg" alt="Card image cap">
                                 <a href="#!">
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
@@ -195,7 +195,7 @@
                         <div class="card">
                             <!-- Card image -->
                             <div class="view overlay">
-                                <img class="card-img-top" src="img/scania-side2.JPG" alt="Card image cap">
+                                <img class="card-img-top" src="img/renault.JPG" alt="Card image cap">
                                 <a href="#!">
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
@@ -204,12 +204,12 @@
                             <div class="card-body">
 
                                 <!-- Title -->
-                                <h4 class="card-title">BOVA FUTURA</h4>
+                                <h4 class="card-title">RENAULT ILLIADE</h4>
                                 <!-- Text -->
                                 <ul>
-                                    <li>AUTOKAR TURYSTYCZNY NA 58 OS.</li>
+                                    <li>AUTOKAR TURYSTYCZNY NA 56 OS.</li>
                                     <li>klimatyzacja, ogrzewanie postojowe</li>
-                                    <li>DVD, radio, lodówka, mikrofon, barek, WC</li>
+                                    <li>DVD, radio, lodówka, mikrofon, WC</li>
                                 </ul>
                             </div>
                         </div>
