--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             <div class="col-sm-6 fleet-left">
                 <h2 class="font-weight-bold" id="btn-left">Busy</h2>
                 <div class="view overlay zoom">
-                    <img src="img/flota2.JPG" class="img-fluid photo" alt="zoom">
+                    <img src="img/flota2.JPG" class="img-fluid photo" id="img-left" alt="zoom">
                 </div>
 
             </div>
             <div class="col-sm-6 fleet-right">
                 <h2 class="font-weight-bold" id="btn-right">Autokary</h2>
                 <div class="view overlay zoom">
-                    <img src="img/flota.JPG" class="img-fluid photo" alt="zoom">
+                    <img src="img/flota.JPG" class="img-fluid photo" id="img-right" alt="zoom">
                 </div>
             </div>
             <div class="col-sm-12" id="coaches">
@@ -119,9 +119,9 @@
                         <!-- Card -->
                         <div class="card">
                             <!-- Card image -->
-                            <div class="view overlay">
-                                <img class="card-img-top" src="img/scania-side2.JPG" alt="Card image cap">
-                                <a href="#!">
+                            <div class="view overlay" id="coaches-1">
+                                <img class="card-img-top" src="img/scania-new.JPG" alt="Card image cap">
+                                <a href="#">
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
                             </div>
@@ -170,7 +170,7 @@
                         <div class="card">
                             <!-- Card image -->
                             <div class="view overlay">
-                                <img class="card-img-top" src="img/volvo-side.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/volvo-new.jpg" alt="Card image cap">
                                 <a href="#!">
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
@@ -214,6 +214,37 @@
                             </div>
                         </div>
                         <!-- Card -->
+                    </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade bs-example-modal-lg" id="coaches-modal-1" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div id="carousel-coaches-1" class="carousel-coaches-1 carousel slide" data-ride=".carousel-coaches-1">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="img/scania.JPG" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/scania-side.JPG" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/scania-side2.JPG" class="d-block w-100" alt="...">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href=".carousel-coaches-1" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href=".carousel-coaches-1" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                        </div>
                     </div>
                 </div>
             </div>
